--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,6 +22,7 @@ body {
    
     margin: auto;
     margin-top: 80px;
+    margin-bottom: 100px;
     width: 318px;
     height: 500px;
     background-image: url('mar.jpg');
